Fix a bug where long text with no spaces might overflow the container

--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -67,6 +67,9 @@
     align-items: center; /* This ensures vertical alignment */
     flex-wrap: wrap;
     column-gap: 4px;
+
+    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 
 .heading > span {
@@ -88,6 +91,8 @@
 
 .description > a {
     font-size: inherit;
+    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 
 .profile_info {
